# hands-on-planning-group-7-

./: README.md
ff/: CMakeLists.txt  README.md  dead_reckoning.py  myPublishnode.py
ff/config/: swiftpro.yaml
ff/launch/: my_kobuki_basic_2.launch  pr_lab1.launch  turtlebot_basic.launch  turtlebot_hoi.launch  turtlebot_hoi_circuit1.launch  turtlebot_hol_circuit2_aruco.launch
ff/scenarios/: kobuki_basic_project.scn  kobuki_project.scn  lab3_world.scn  my_kobuki_basic_2.scn  turtlebot.scn  turtlebot_hoi.scn  turtlebot_hoi_circuit1.scn  turtlebot_hoi_circuit2.scn  turtlebot_integration.scn
ff/src/: RRT.py  laser_scan_to_point_cloud_node.py  turtlebot_online_path_planning_node.py
ff/src/utils_lib/: online_planning.py
swiftpro_description/: CMakeLists.txt  package.xml
swiftpro_description/rviz/: swiftpro.rviz
swiftpro_description/src/: swiftpro_rviz_node.cpp
swiftpro_description/urdf/: swiftpro.urdf.xacro
turtlebot_description/: CMakeLists.txt  package.xml
turtlebot_description/rviz/: HOPL.rviz  turtlebot.rviz
turtlebot_description/urdf/: turtlebot.urdf.xacro
turtlebot_simulation/: ground_tr.py  package.xml  twist_vel.py
turtlebot_simulation/config/: turtlebot.yaml
turtlebot_simulation/launch/: kobuki_basic.launch  kobuki_basic_project .launch  my_kobuki_basic.launch  octomap.launch  swiftpro_basic.launch  turtlebot_hoi_circuit2.launch  turtlebot_integration.launch
turtlebot_simulation/scenarios/: kobuki.scn  lab3_kobuki.scn  my_kobuki.scn  my_kobuki_2.scn  my_kobuki_basic.scn  pr_kobuki.scn  project_world.scn  swiftpro_basic.scn  turtlebot_basic.scn  turtlebot_hol_circuit2_arucos.scn
