<?xml version="1.0"?>
<package format="2">
  <name>swiftpro_description</name>
  <version>2.0.0</version>
  <description>
    swiftpro_description provides a complete 3D model of the SwiftPro manipulator for simulation and visualization. 
    The files in this package are parsed and used by a variety of other components. 
    Most users will not interact directly with this package.
  </description>
  <author>Patryk Cieslak</author>
  <maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
