<package format="2">
  <name>turtlebot_description</name>
  <version>2.0.0</version>
  <description>
     turtlebot_description provides a complete 3D model of the TurtleBot for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Roger Pi</author>
  <maintainer email="roger.pi@udg.edu">Roger Pi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
</package>