<?xml version="1.0"?>
<package format="2">
	<name>turtlebot_simulation</name>
	<version>1.0.0</version>
	<description>
		turtlebot_simulation contains simulation setups for Kobuki, SwiftPro and the whole Turtlebot.
	</description>
	<author email="patryk.cieslak@udg.edu">Patryk Cieslak</author>
	<maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>stonefish_ros</depend>
	<export>
	</export>
</package>
